# modern_cpp

./: CMakeLists.txt
include/helpers/: printing.h
src/: crtp.cpp  main.cpp  raii.cpp
src/cpp17/: splicing.cpp
src/helpers/: ReadMe.md
src/idioms/: Readme.md  cpy_swap.cpp  crtp.cpp  rtr.cpp  sfinae.cpp
